# neural_process

./: .gitignore  LICENSE  readme.md  setup.cfg
scripts/: run_neural_process.py  run_neural_processes.py
src/neural_process/: aggregator.py  attention.py  decoder_network.py  encoder_network.py  neural_process.py
src/np_util/: datasets.py  mlp.py  output_trafo.py  tqdm_logging_handler.py
