[metadata]
name = neural_process 
description = PyTorch implementation of various Neural Process variants.
author = Michael Volpp 
license = none 
platforms = linux, osx
version = 0.0.1
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8

[options]
install_requires =
    torch
    pyyaml
    numpy
    matplotlib
python_requires = >=3.8
package_dir =
    =src
packages =
    neural_process 
    np_util