[metadata]
name = neural_process 
description = PyTorch implementation of various Neural Process variants.
author = Michael Volpp 
license = AGPL-3.0 
platforms = linux, osx
version = 0.0.1
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8

[options]
python_requires = >=3.8
install_requires =
    torch>=1.9
    pyyaml>=6.0
    numpy>=1.22
    matplotlib>=3.4
    tqdm>=4.62
package_dir =
    =src
packages =
    neural_process 
    np_util

[options.extras_require] =
    dev = black

